Minor code analysis issues